--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.7",
     "styled-components": "^6.0.8",
     "zustand": "^4.4.2"
   },
