--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
+    "ngx-cookie-service": "^16.0.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.7",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
+    "zod": "^3.22.4",
     "zustand": "^4.4.2"
   },
   "devDependencies": {
