--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "axios": "^1.5.1",
+    "babel-plugin-macros": "^3.1.0",
+    "fortawesome": "0.0.1-security",
     "jwt-decode": "^3.1.2",
     "ngx-cookie-service": "^16.0.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
